[package]
name = "rust-kr"
version = "0.1.0"
authors = ["GG-O-BP <GGOBP@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "*"
rocket_contrib = "*"
maud = { vsrsion = "*", features = ["rocket"]}
ammonia = "*"
pulldown-cmark = "*"
